<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:background="@color/White"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/MainLayout"
    android:weightSum="1">

    <TextView
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_output"
        android:textSize="35sp"
        android:textAlignment="textEnd"
        android:maxLength="25" />

    <RadioGroup
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:weightSum="1">

        <RadioButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Dec"
            android:id="@+id/rdoBtn_dec"
            android:textSize="25sp"
            android:checked="true" />

        <RadioButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Dul"
            android:id="@+id/rdoBtn_dul"
            android:textSize="25sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Oct"
            android:id="@+id/rdoBtn_oct"
            android:textSize="25sp"
            android:checked="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EXIT"
            android:id="@+id/button"
            android:layout_weight="0.71" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clean"
            android:id="@+id/btn_clean"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fac"
            android:id="@+id/btn_fac"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/spa"
            android:id="@+id/btn_spc"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="349dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Seven"
            android:id="@+id/btn_7"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Eight"
            android:id="@+id/btn_8"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Nine"
            android:id="@+id/btn_9"
            android:textSize="35sp"
            android:textAlignment="center"
            android:enabled="true" />

        <Button
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:text="@string/div"
            android:id="@+id/btn_div"
            android:layout_gravity="center_horizontal"
            android:textSize="35sp"
            android:textAlignment="inherit" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Four"
            android:id="@+id/btn_4"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="35sp"
            android:layout_weight="0.15" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Five"
            android:id="@+id/btn_5"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="35sp"
            android:layout_weight="0.23" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Six"
            android:id="@+id/btn_6"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="35sp"
            android:layout_weight="0.19" />

        <Button
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:text="@string/mul"
            android:id="@+id/btn_mul"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/One"
            android:id="@+id/btn_1"
            android:textSize="35sp"
            android:layout_weight="0.32"
            android:textAlignment="center" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Two"
            android:id="@+id/btn_2"
            android:layout_gravity="right"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="62dp"
            android:text="@string/Three"
            android:id="@+id/btn_3"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:text="@string/sub"
            android:id="@+id/btn_sub"
            android:textSize="35sp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            android:layout_width="87.25dp"
            android:layout_height="match_parent"
            android:text="@string/Zero"
            android:id="@+id/btn_0"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="87.25dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:id="@+id/btn_eqal"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:text="@string/Add"
            android:id="@+id/btn_add"
            android:textSize="35sp"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="@string/Dot"
            android:id="@+id/btn_dot"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>
